--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi soluta ipsam, voluptatem deleniti hic at repellendus accusamus placeat doloribus eius nemo odio excepturi. Dolor necessitatibus vel, corporis numquam perferendis repellat.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi eveniet illo id beatae itaque quasi eaque quidem laborum officiis esse dolores expedita numquam harum ipsa asperiores molestias amet, architecto praesentium!</p>
         </article>
     </main>
 </body>
