--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi soluta ipsam, voluptatem deleniti hic at repellendus accusamus placeat doloribus eius nemo odio excepturi. Dolor necessitatibus vel, corporis numquam perferendis repellat.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi soluta ipsam, voluptatem deleniti hic at repellendus accusamus placeat doloribus eius nemo odio excepturi. Dolor necessitatibus vel, corporis numquam perferendis repellat. Muito bom esse curso!
+            </p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
